Saytın ilkin versiyası

--- a/index.html
+++ b/index.html
@@ -1,29 +1,112 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="az">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adəm Məmmədov - Vikipedia Səhifəsi</title>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GreenTech Solutions</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head><link rel="stylesheet" href="style.css">
 <body>
-    <h1>Adəm Məmmədov haqqında</h1>
-    <p>Bu səhifə sadə bir vikipedia nümunəsidir.
 
-    <ul>
-        <li><strong>Ad:</strong> Adəm</li>
-        <li><strong>Soyad:</strong> Məmmədov</li>
-        <li><strong>Doğum tarixi:</strong> 28 aprel 2006</li>
-        <li><strong>Yaşadığı yer:</strong> Bakı, Azərbaycan</li>
-        <li><strong>Peşə:</strong> Tələbə</li>
-        <li><strong>Hobbilər:</strong> Kitab oxumaq, futbol oynamaq, şahmat oynamaq, ensiklopediya oxumaq və s.</li>
-        <li><strong>Təhsil:</strong> Bakı MÜhəndislik Universiteti, Logistika və Mühəndislik, Nəqliyyatda Servis</li>
-        <li><strong>Bacarıqlar:</strong> Excel, Auto Cad, Power Point, Word, Məqalə və blog yazmaq</li>
-        <li><strong>Maraqları:</strong> Proqramlaşdırma, Süni intellekt, texnologiya</li>
-        <li><strong>Hədəf:</strong> Süni İntellektlə səsli əlaqəni daha rahat və əlçatan etmək</li>
-        <li><strong>Xarici dil:</strong> Rus-B1, İngilis-A2-B1, Türk-B2</li>
-        <li><strong>Təcrübə:</strong> Könüllülük-1 saylı Asan Xidmət Mərkəzi-3 ay müddətində<li>
-        <li><strong>Əlaqə:</strong> mail-mammadovadem842@gmail.com</li>  
-        <img src="https://photos.google.com/photo/AF1QipPoSkltjpSxRFLkTNfWozl0WK4d4ya_3kJT9EdW" alt="Adəm Məmmədov" style="width:200px;height:auto;">
-        <ul>    
+  <!-- NAVBAR -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">GreenTech</a>
+      <div>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="#">Ana Səhifə</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Texnologiyalar</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Əlaqə</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+    <!-- ANA MƏZMUN -->
+  <div class="container mt-5">
+    <div class="text-center">
+      <h1>GreenTech Solutions</h1>
+      <p class="lead">Ətraf mühitə dost texnologiyalar və innovativ həllər</p>
+    </div>
+
+    <!-- ŞƏKİLLİ KART -->
+    <div class="card mt-4" style="width: 18rem; margin: auto;">
+      <div class="card-body">
+        <h5 class="card-title">Yaşıl Enerji</h5>
+        <p class="card-text">Biz təmiz enerji ilə gələcəyi qururuq. Günəş, külək və daha çox.</p>
+        <a href="#" class="btn btn-success">Daha ətraflı</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Bootstrap JS (opsional) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+<!-- HERO SECTION -->
+<section class="bg-light text-center p-5">
+  <h1 class="display-4">Xoş Gəldiniz GreenTech-ə!</h1>
+  <p class="lead">Yaşıl texnologiyalarla daha yaşıl gələcək qururuq.</p>
+  <img src="download.webp" class="img-fluid my-3" alt="GreenTech">
+</section>
+
+<!-- TEXNOLOGİYALAR -->
+<section class="container my-5">
+  <h2 class="text-center mb-4">Texnologiyalar</h2>
+  <div class="row">
+    <div class="col-md-4">
+      <div class="card h-100">
+        <img src="solar-farm-high-rez.webp" class="card-img-top" alt="Solar">
+        <div class="card-body">
+          <h5 class="card-title">Günəş Enerjisi</h5>
+          <p class="card-text">Təmiz və sərfəli enerji mənbəyi olan günəş texnologiyaları.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card h-100">
+        <img src="wind-turbine-future-energy.width-600.jpg" class="card-img-top" alt="Wind">
+        <div class="card-body">
+          <h5 class="card-title">Külək Turbinləri</h5>
+          <p class="card-text">Effektiv külək enerjisi sistemləri ilə təmiz enerji istehsalı.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="card h-100">
+        <img src="images.jpeg" class="card-img-top" alt="Recycle">
+        <div class="card-body">
+          <h5 class="card-title">Tullantıların İdarə Olunması</h5>
+          <p class="card-text">Ağıllı təkrar emal sistemləri ilə ətraf mühitə töhfə ver.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ƏLAQƏ FORMASI -->
+<section class="bg-success text-white p-5">
+  <div class="container">
+    <h2 class="text-center mb-4">Bizimlə Əlaqə</h2>
+    <form>
+      <div class="mb-3">
+        <label for="name" class="form-label">Adınız</label>
+        <input type="text" class="form-control" id="name" placeholder="Adınızı daxil edin">
+      </div>
+      <div class="mb-3">
+        <label for="email" class="form-label">Email ünvanı</label>
+        <input type="email" class="form-control" id="email" placeholder="example@mail.com">
+      </div>
+      <div class="mb-3">
+        <label for="message" class="form-label">Mesajınız</label>
+        <textarea class="form-control" id="message" rows="3" placeholder="Mesaj yazın"></textarea>
+      </div>
+      <button type="submit" class="btn btn-light">Göndər</button>
+    </form>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<footer class="bg-dark text-white text-center p-3 mt-5">
+  <p class="mb-0">&copy; 2025 GreenTech Solutions. Bütün hüquqlar qorunur.</p>
+</footer>
+
